Fixing javadoc, test-classes